kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-ci-cd-demo-service
spec:
  selector:
    app: docker-ci-cd-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
